wacc/test/golden/syntaxErr.pairs.fstNull
# call fst on a null pair literal

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int i = fst null;
  println i
end


(line 12, column 15):
  unexpected keyword null
  expected fst, identifier, or snd
  >begin
  >  int i = fst null;
                 ^^^^
  >  println i